lcb: Created pattern for rotl